--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,10 @@
 <div class="header">
-    <!--
-    <img src="img/paws.png" alt="paw icon" class="header-icon">
+    <div id="header-logo">
+        <img src="img/paws.png" alt="paw icon" class="header-icon">
 
-    -->
-    <h1><a href="#">Pets-R-Us</a></h1>
+        <h1><a href="#">Pets-R-Us</a></h1>
+    </div>
+    
 
     <nav>
         <ul>
