--- a/views/grooming.ejs
+++ b/views/grooming.ejs
@@ -17,6 +17,10 @@
     <body class="dark-theme">
         <%- include('partials/header') %>
 
+        <div class="img-container" id="grooming-img">
+            <img src="img/grooming-cat-gustavo.jpg">
+        </div>
+
         <div class="container card" id="grooming-info">
             <h1 class="card-title">Grooming</h1>
             <div class="card-content">
