--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <footer>
     <a href="https://www.flaticon.com/free-icons/paw" title="paw icons">Paw icons created by Creatype - Flaticon</a><br>
-    <a href="https://www.pexels.com/photo/english-cocker-spaniel-puppy-sitting-on-ground-beside-grass-1254140/">Photo by Johann</a>
+    <a href="https://www.pexels.com/collections/pets-r-us-cpbv2o9/">Photos sourced by Pexel</a>
 </footer>
