--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,14 +2,16 @@
     <div id="header-logo">
         <img src="img/paws.png" alt="paw icon" class="header-icon">
 
-        <h1><a href="#">Pets-R-Us</a></h1>
+        <h1><a href="/">Pets-R-Us</a></h1>
     </div>
     
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/grooming">Grooming</a></li>
+            <li><a href="/boarding">Boarding</a></li>
+            <li><a href="/training">Training</a></li>
         </ul>
     </nav>
 </div>
