--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
             <li><a href="/training">Training</a></li>
             <li><a href="/customers">Customer List</a></li>
             <li><a href="/booking">Appointment Booking</a></li>
+            <li><a href="/my-appointments">Appointment Lookup</a></li>
         </ul>
 
         
